# retainit

./: DesignDoc.md  LICENSE  README.md  github-workflow.yaml  pyproject.toml
examples/: comprehensive_test.py  prometheus_metrics.py  simple.py  using_events.py
src/retainit/: __init__.py  config.py  core.py  events.py  metrics.py  registry.py  settings.py
src/retainit/backends/: __init__.py  base.py  config.py  disk.py  memory.py
